Revert "Fix mobile scrolling cut off by top bar"

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -364,8 +364,9 @@ textarea {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  height: 100vh;
   max-width: 100vw;
-  overflow: visible;
+  overflow: hidden;
   position: relative;
 }
 
